Crud Peronas JWWT